# recall-synchronizer

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  Makefile  README.md  config-direct.toml  config.example.toml  config.toml  docker-compose.yml  env.example  networks.toml  test-wallets.json  test_config.toml
.claude/commands/: context_prime.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ai/docs/: org-general-practices.mdc  org-rust-standards.mdc  repo-specific-config.mdc  rust-snippet-error.mdc  rust-snippet-fake.mdc
deployment/: README.md  cleanup.sh  deploy.sh  docker-compose.yaml
schema/: init.sql
scripts/: check-recall-status.sh  check-wallet-balance.sh  docker-clean.sh  fund-all-test-wallets.sh  fund-wallet.sh  recall-start-if-needed.sh  recall-start.sh  recall-stop.sh  start-recall.sh
src/: config.rs  config.toml  logging.rs  main.rs  test_utils.rs
src/db/: data_type.rs  database.rs  error.rs  fake.rs  mod.rs  models.rs  pg_data_type.rs  pg_schema.rs  postgres.rs  syncable.rs  tests.rs
src/recall/: error.rs  fake.rs  mod.rs  recall.rs  storage.rs  tests.rs
src/s3/: compat.rs  error.rs  fake.rs  mod.rs  real_s3.rs  s3.rs  storage.rs  tests.rs
src/sync/: job.rs  mod.rs  state.rs  synchronizer.rs  synchronizer_tests.rs  tests.rs
src/sync/storage/: error.rs  fake.rs  mod.rs  models.rs  sqlite.rs  sync_storage.rs  tests.rs
src/test_utils/: wallet_pool.rs
