[package]
name = "recall-synchronizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-tempfile = "0.7.0"
aws-config = "0.55"
aws-sdk-s3 = "0.28"
aws-credential-types = "0.55"
bytes = "1.4"
clap = { version = "4.3", features = ["derive"] }
config = { version = "0.13", features = ["toml"] }
#recall_provider = { package = "recall_provider", git = "https://github.com/recallnet/rust-recall.git" }
#recall_sdk = { package = "recall_sdk", git = "https://github.com/recallnet/rust-recall.git" }
#recall_signer = { package = "recall_signer", git = "https://github.com/recallnet/rust-recall.git" }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
thiserror = "1.0"
tokio = { version = "1.44.2", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lru = "0.10"
