[package]
name = "recall-synchronizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-tempfile = "0.7.0"
async-trait = "0.1"
aws-config = "0.55"
aws-sdk-s3 = "0.28"
aws-credential-types = "0.55"
bytes = "1.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
config = { version = "0.13", features = ["toml"] }
futures = "0.3"
hex = "0.4"
lru = "0.10"
rand = "0.8"
#recall_provider = "0.1.2"
#recall_sdk = "0.1.2"
#recall_signer = "0.1.2"
recall_provider = { git = "https://github.com/recallnet/rust-recall", rev = "0cc57a392f2b15dd27dfdc803dd72a746a95ac44" }
recall_sdk = { git = "https://github.com/recallnet/rust-recall", rev = "0cc57a392f2b15dd27dfdc803dd72a746a95ac44" }
recall_signer = { git = "https://github.com/recallnet/rust-recall", rev = "0cc57a392f2b15dd27dfdc803dd72a746a95ac44" }
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
secp256k1 = "0.29"
libsecp256k1 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }
tempfile = "3.8"
thiserror = "1.0"
tokio = { version = "1.44.2", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
toml = "0.8.22"
url = "2.5"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.8"
shellexpand = "3.0"
